Fix width and text-align (in Favorites and SearchResult page)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,3 +82,7 @@ a {
 .w-100 {
   width: 100%;
 }
+
+.text-center {
+  text-align: center;
+}
